--- a/a2e/a2e-frontend/src/main/webapp/index.html
+++ b/a2e/a2e-frontend/src/main/webapp/index.html
@@ -1,5 +1,20 @@
-<html>
+<!doctype html>
+<html lang="en" ng-app="a2eApp">
+<!-- JS dependencies -->
+<script type="text/javascript"
+    src="lib/angularjs/1.5.0-rc.1/angular.min.js"></script>
+<script type="text/javascript"
+    src="lib/uibootstrap/1.1.1/ui-bootstrap-tpls.min.js"></script>
 <head>
+<meta charset="UTF-8">
+<!-- CSS dependencies -->
+<link rel="stylesheet" type="text/css" href="css/a2eStyles.css"
+    media="screen">
+<link rel="stylesheet" type="text/css"
+    href="lib/bootstrap/3.3.6/css/bootstrap-theme.min.css" media="screen">
+<link rel="stylesheet" type="text/css"
+    href="lib/bootstrap/3.3.6/css/bootstrap.min.css" media="screen">
+<title>Angular2Elastic</title>
 </head>
 <body ng-controller="MainController">
 </body>
